// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`add todos 1`] = `
<div>
  <div>
    <ul>
      <li>
        foo
      </li>
      <li>
        bar
      </li>
    </ul>
    <p />
    <input />
    <button>
      add
    </button>
  </div>
</div>
`;

exports[`add todos 2`] = `
<div>
  <div>
    <ul>
      <li>
        foo
      </li>
      <li>
        bar
      </li>
    </ul>
    <p>
      the quick brown fox jumps over the lazy dog
    </p>
    <input />
    <button>
      add
    </button>
  </div>
</div>
`;

exports[`add todos 3`] = `
<div>
  <div>
    <ul>
      <li>
        foo
      </li>
      <li>
        bar
      </li>
      <li>
        the quick brown fox jumps over the lazy dog
      </li>
    </ul>
    <p>
      
    </p>
    <input />
    <button>
      add
    </button>
  </div>
</div>
`;

exports[`renders 1`] = `
<div>
  <div>
    <ul>
      <li>
        foo
      </li>
      <li>
        bar
      </li>
    </ul>
    <p />
    <input />
    <button>
      add
    </button>
  </div>
</div>
`;
